--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,5 +9,18 @@
 :root {
     --navbar-h: 4rem;
     --sidebar-w: 25%;
-  }
+}
 
+@layer components {
+    .btn-outline {
+        @apply hover:text-white border focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:hover:text-white;
+    }
+
+    .btn-outline-primary {
+        @apply btn-outline text-blue-700 border-blue-700 hover:bg-blue-800 focus:ring-blue-300 dark:border-blue-500 dark:text-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-800;
+    }
+
+    .btn-outline-dark {
+        @apply btn-outline text-gray-900 border-gray-800 hover:bg-gray-900 focus:ring-gray-300 dark:border-gray-600 dark:text-gray-400 dark:hover:bg-gray-600 dark:focus:ring-gray-800;
+    }
+}
